# astrobee

./: .clang-format  .gitmodules  CMakeLists.txt
astrobee/config/mobility/: choreographer.config  ellis_planner.config  planner_discrepancy.config
astrobee/config/robots/: bsharp.config
astrobee/config/worlds/: granite.config
astrobee/launch/controller/: rviz.launch
astrobee/launch/robot/: MLP.launch
astrobee/resources/: logging.config
astrobee/resources/rviz/: granite.rviz
cmake/: CreateLibrary.cmake  CreateToolTargets.cmake
ellis/: CMakeLists.txt
ellis/ellis_planner/: CMakeLists.txt  nodelet_plugins.xml  package.xml
ellis/ellis_planner/config/: actions.yaml  experiment.yaml  experiment_sim.yaml  experiment_sim_scenario_1.yaml  experiment_sim_scenario_2.5.yaml  experiment_sim_scenario_2.yaml  granite_replay.rviz  icra23_experiments_config.yaml
ellis/ellis_planner/include/ellis_planner/: clock.h  collision_object.h  disturbance_model_manager.h  environment.h  gp.h  gp_impl.hpp  gp_impl.hxx  linear_dynamics.h  linear_dynamics_impl.hxx  normal_dist.h  planner_interface.h  polynomial.h  polynomial_trajectory.h  polynomial_trajectory_impl.h  rectangle_collision_object.h  search.h  state.h
ellis/ellis_planner/launch/: experiment.launch  experiment_sim.launch  icra23_experiments.launch  replay_experiment.launch
ellis/ellis_planner/msg/: ControlHistory.msg  PlanningInfo.msg
ellis/ellis_planner/scripts/: discrepancy_plots.py  disturbance_modelling.py  fake_disturbance_manager.py  fake_obstacle_manager.py  icra23_plots.py  obstacle_manager.py
ellis/ellis_planner/src/: clock.cpp  collision_object.cpp  disturbance_model_manager.cpp  environment.cpp  planner_interface.cpp  polynomial.cpp  rectangle_collision_object.cpp  search.cpp  state.cpp
ellis/ellis_planner/srv/: AddDisturbance.srv  AddObstacle.srv  ReportExecutionError.srv
ellis/ellis_planner/tools/: experiment_manager.cpp  icra23_experiments.cpp  test_gp.cpp
scripts/docker/: build.sh  run.sh
uncertainty/: CMakeLists.txt
uncertainty/discrepancy_planner/: CMakeLists.txt  nodelet_plugins.xml  package.xml
uncertainty/discrepancy_planner/config/: experiment.yaml  granite_lab.rviz  motion_primitives.yaml  obstacles.yaml
uncertainty/discrepancy_planner/include/discrepancy_planner/: box.h  euclidean_heuristic.h  free_flyer_state_space.h  line_segment.h  normal_util.h  planner_nodelet.h  polynomial_trajectory.h  rtaa.h  util.h
uncertainty/discrepancy_planner/launch/: discrepancy_planner.launch  run_experiment.launch
uncertainty/discrepancy_planner/scripts/: obstacle_manager_node.py
uncertainty/discrepancy_planner/src/: box.cpp  euclidean_heuristic.cpp  free_flyer_state_space.cpp  line_segment.cpp  planner_nodelet.cpp  util.cpp
uncertainty/discrepancy_planner/tools/: run_experiment.cpp  test_planner.cpp
