<?xml version="1.0"?>
<package>
  <name>ellis_planner</name>
  <version>0.0.0</version>
  <description>
    TBD
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="eratner@berkeley.edu">
    Ellis Ratner
  </author>
  <maintainer email="eratner@berkeley.edu">
    Ellis Ratner
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ff_util</build_depend>
  <build_depend>ff_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ff_util</run_depend>
  <run_depend>ff_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2</run_depend>

  <export>
  </export>
</package>
